examples/test/testpolicy8734.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8734
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key21: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value16
      podSelector:
        matchLabels:
          key28: value9
          key5: value6
          key17: value0
